# CAMAR

./: .gitignore  README.md  pyproject.toml  rrt.py  xppo.py
.devcontainer/: devcontainer.json  setup-container.sh
.github/workflows/: ruff.yml  tests.yml
baselines/: isac.py  xppo.py
images/: render.py
protocols/: evaluation_protocols.md
protocols/easy-medium/: labmaze_grid_h21_w21_a32_r4-9_c0.4.yaml  labmaze_grid_h21_w21_a32_r4-9_c0.65.yaml  labmaze_grid_h21_w21_a32_r4-9_c1.0.yaml  labmaze_grid_h21_w21_a8_r4-9_c0.4.yaml  labmaze_grid_h21_w21_a8_r4-9_c0.65.yaml  labmaze_grid_h21_w21_a8_r4-9_c1.0.yaml  random_grid_h20_w20_a32_o0.yaml  random_grid_h20_w20_a32_o20.yaml  random_grid_h20_w20_a32_o60.yaml  random_grid_h20_w20_a8_o0.yaml  random_grid_h20_w20_a8_o20.yaml  random_grid_h20_w20_a8_o60.yaml
rl_env/core/: utils.py
rl_env/torchrl/: torchrl_wrapper.py
src/camar/: __init__.py  environment.py  make_env.py  utils.py
src/camar/core/: environment.py  utils.py
src/camar/core/maps/: __init__.py  base.py  grid.py  labmaze.py  random_grid.py  string_grid.py
src/camar/dynamics/: base.py  diffdrive.py  holonomic.py  mixed.py
src/camar/integrations/: torchrl.py
src/camar/maps/: __init__.py  base.py  base_map.py  batched_string_grid.py  caves_cont.py  const.py  labmaze.py  labmaze_grid.py  movingai.py  random_grid.py  string_grid.py  utils.py
src/camar/render/: __init__.py  matplotlib.py  renderer.py  svg.py
src/camar/wrappers/: craftax.py
src/contmapf/core/: environment.py
src/contmapf/torchrl/: torchrl_wrapper.py
tests/: test_readme.py
