[project]
name = "camar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Square596", email = "artem211201@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.5",
    "jax>=0.5.3",
]

[project.scripts]
contmapf = "contmapf:main"

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]>=0.5.3",
]
torchrl = [
    "torchrl>=0.7.2",
]
baselines = [
    "torchrl>=0.7.2",
    "tqdm>=4.67.1",
]
matplotlib = [
    "matplotlib>=3.10.1",
]
labmaze = [
    "labmaze>=1.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
