[project]
name = "camar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Square596", email = "artem211201@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.5",
    "jax>=0.5.3",
]

[project.scripts]
contmapf = "contmapf:main"

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]>=0.5.3",
]
torchrl = [
    "torchrl>=0.7.0",
]
baselines = [
    "matplotlib>=3.10.1",
    "pandas>=1.4.4",
    "torchrl>=0.7.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.9",
]
matplotlib = [
    "matplotlib>=3.10.1",
]
labmaze = [
    "labmaze>=1.0.6",
]
benchmarl = [
    "av<14",
    "torchrl>=0.7.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "hydra-core>=1.3.2",
    "wandb>=0.19.9",
    "id-marl-eval>=0.0.4",
]
movingai = [
    "numpy<=1.26.4",
    "opencv-python>=4.11.0.86",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
]
